Fixed responsive issue on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -165,7 +165,7 @@ img {
     body {
         width: 100%
     }
-    #template {
+    #template, #favorite {
         width: calc(100% - 1.6rem);
         grid-template-columns: repeat(2, minmax(0, 1fr));
     }
